[package]
name = "canary"
version = "0.1.6"
edition = "2021"

repository = "https://github.com/znx3p0/canary"
keywords = [ "rpc", "async", "network", "microservices", "api" ]
description = "distributed systems library for making communications through the network easier"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal communications
serde = { version = "1.0.136", features = [ "derive", "rc" ] }
serde_repr = "0.1.7"
bincode = { version = "1.3.3" }

# routes
compact_str = { version = "0.2.0", features = [ "serde" ] }

# runtime
async-std = { version = "1.10.0", optional = true } # stable api
tokio = { version = "1.16.1", features = [ "macros", "time" ], optional = true } # stable api
tracing = "0.1.30" # stable api

# ergonomics
canary-macro = { path = "../canary-macro", version = "0.1.3" }

# communications
igcp = { path = "../igcp", version = "0.1.4", default-features = false }

# compile time
derive_more = "0.99.17" # stable api
cfg-if = "1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.16.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwasm = "0.4.0"

# encryption
rand = "0.8.4"
snow = "0.9.0" # api may change

[lib]
doctest = false

[features]
tokio-net = [ "tokio", "igcp/tokio-net", "async-tungstenite/tokio-runtime" ]
async-std-net = [ "async-std", "igcp/async-std-net", "async-tungstenite/async-std-runtime" ]
wasm = [ "igcp/wasm" ]
default = [ "tokio-net" ]