[package]
name = "igcp"
version = "0.0.6"
edition = "2021"

repository = "https://github.com/znx3p0/canary"
keywords = [ "rpc", "async", "network", "microservices", "api" ]
description = "provides ergonomic abstractions for network communication; communication backend of Canary"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1" }
derive_more = "0.99"

# serde
serde = { version = "1", features = [ "derive" ] }
serde_repr = "0.1"

# formats
bincode = { version = "1" }
serde_json = { version = "1" }
bson = { version = "2.0.1" }
postcard = { version = "0.7.2", features = [ "alloc" ] }

# encryption
snow = "0.8.0" # api may change
rand = "0.8"
