[package]
name = "igcp"
version = "0.1.6"
edition = "2021"

repository = "https://github.com/znx3p0/canary"
keywords = [ "rpc", "async", "network", "microservices", "api" ]
description = "provides ergonomic abstractions for network communication; communication backend of Canary"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
futures-lite = "1"
futures = "0.3"

# serde
serde = { version = "1", features = [ "derive" ] }
serde_repr = "0.1"

# formats
bincode = { version = "1" }
serde_json = { version = "1" }
bson = { version = "2.0.1" }
postcard = { version = "0.7.2", features = [ "alloc" ] }

# encryption
snow = "0.8.0" # api may change
rand = "0.8"

cfg-if = "1"

# network runtimes
async-std = { version = "1", optional = true }
tokio = { version = "1", features = [ "net", "io-util" ], optional = true }

# websocket support
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.16.1", features = [ "async-std-runtime", "tokio-runtime" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwasm = { version = "0.4.0", optional = true }
getrandom = { version = "~0.2.3", features = ["js"], optional = true }
uuid = { version = "~0.8.2", features = ["wasm-bindgen"], optional =  true }

[features]
async-std-net = [ "async-std" ]
tokio-net = [ "tokio" ]
wasm = [ "reqwasm", "getrandom", "uuid" ]
default = [ "tokio-net" ]
