[package]
name = "sia-macro"
version = "0.0.2"
edition = "2021"

repository = "https://github.com/znx3p0/sia"
keywords = [ "rpc", "async", "network", "microservices", "api" ]
description = "contains sia's macros"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = [ "full" ] }
quote = "1"
proc-macro-crate = "1"

[lib]
proc-macro = true
