[package]
name = "sia"
version = "0.0.0"
edition = "2021"

repository = "https://github.com/znx3p0/sia"
keywords = [ "rpc", "async", "network", "microservices", "api" ]
description = "distributed systems library for making communications through the network easier"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal communications
serde = { version = "1", features = [ "derive", "rc" ] }
bincode = { version = "1" }

# routes
dashmap = "5" # stable api
once_cell = "1" # stable api
compact_str = { version = "0.2", features = [ "serde" ] }

# runtime
async-std = { version = "1", features = [ "unstable" ], optional = true } # stable api
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "time" ], optional = true } # stable api
tracing = "0.1" # stable api

# ergonomics
sia-macro = { path = "../sia-macro" }

# communications
igcp = { path = "../igcp" }

# compile time
derive_more = "0.99" # stable api

# providers
camino = "1"

# encryption
rand = "0.8"
snow = "0.8.0" # api may change

[lib]
doctest = false

[features]
rt-tokio = [ "tokio" ]
rt-async-std = [ "async-std" ]

default = [ "rt-async-std" ]
